--- a/reto1/style.css
+++ b/reto1/style.css
@@ -175,21 +175,21 @@ p {
 
 /*index.html*/
 
-#indexb {
+body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
 }
 
-.ucv {
+#logo span {
     font-size: 0.6em;
 }
 
 button {
-    color: #87b1ef
+    color: #87b1ef;
 }
 
-#indexh {
+header {
     background-color: #87b1ef;
     color: white;
     padding: 10px 0;
@@ -203,32 +203,25 @@ footer {
     font-size: 1.2em;
 }
 
-.cabecera {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 nav ul {
     display: flex;
     list-style: none;
     margin: 0;
-    gap: 20px;
+    padding: 0 20px;
+    justify-content: space-between;
+    align-items: center;
 }
-
 nav li {
     font-size: 1.2em;
     list-style: none;
 }
 
-.saludo {
+#saludo {
     font-size: 1.2em;
     list-style: none;
 }
 
-
-.personas {
+.gallery {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -239,7 +232,7 @@ nav li {
     align-items: start;
 }
 
-.personas li {
+.gallery li {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
@@ -247,7 +240,7 @@ nav li {
     margin-bottom: 0;
 }
 
-.estudiantes {
+.gallery li a {
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -259,9 +252,10 @@ nav li {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    text-decoration: none; 
 }
 
-.estudiantes img {
+.galleryimg {
     width: 200px;
     height: 200px;
     object-fit: contain;
@@ -269,18 +263,18 @@ nav li {
     margin-bottom: 10px;
 }
 
-.estudiantes p {
+.gallery label {
     color: #87b1ef;
     font-size: 1.5em;
     margin: 0;
     text-align: center;
 }
 
-.estudiantes {
+.gallery li a {
     transition: all 0.2s ease-in-out;
 }
 
-.estudiantes:hover {
+.gallery li a:hover {
     background-color: #99c5dd;
     transform: scale(1.05) rotate(5deg);
 }
