--- a/reto1/style.css
+++ b/reto1/style.css
@@ -17,7 +17,7 @@ h1 {
     font-size: 1rem;
 }
 
-#foto_perfil {
+.foto-perfil {
     width: 20%;
     height: auto;
     border-top-left-radius: 50px;
@@ -278,6 +278,8 @@ nav li {
     background-color: #99c5dd;
     transform: scale(1.05) rotate(5deg);
 }
+
+
 
 
 /* Media queries*/
